2020-10-16 Wiley E. Hill <wileyhill@gmail.com>

    * src/x/x_window.c: Update x_recent_menu_ function prefix.

2020-10-15 Wiley E. Hill <wileyhill@gmail.com>

    * po/POTFILES.in: Include new module x_recent_menu.c.

    * src/x/x_menus.c: Add function x_menu_get_ui_list.

    * src/x/x_recent_menu.c: Add new module with code for the recent menu
      relocated from x_menus.c.

2020-10-14 Wiley E. Hill <wileyhill@gmail.com>

    * src/guile/g_funcs.c: Change int successes to bool in g_funcs_postscript
      and g_funcs_print. Revise g_funcs_output_type to eliminate second
      conditional.

2020-10-13 Wiley E. Hill <wileyhill@gmail.com>

    * src/guile/: Reformat function documentation:

        * src/guile/g_rc.c
        * src/guile/g_select.c

    * src/guile/g_action.c: Add function documentation:

        * g_process_action

    * src/guile/g_register.c: Remove static specifier from action_list in
      g_register_funcs.

2020-10-12 Wiley E. Hill <wileyhill@gmail.com>

    * src/guile/: Reformat function documentation:

        * src/guile/g_action.c
        * src/guile/g_attrib.c
        * src/guile/g_rc.c
        * src/guile/g_register.c
        * src/guile/g_funcs.c

    * src/guile/g_action.c: Add todo documentation templates.

2020-10-10 Wiley E. Hill <wileyhill@gmail.com>

    * po/af.po: Update Arabic translations.
    * po/bg.po: Update Bulgarian translations.
    * po/bs.po: Update Bosnian translations.
    * po/es.po: Update Spanish translations.
    * po/it.po: Update Italian translations.
    * po/ja.po: Update Japanese translations.
    * po/nl.po: Update Dutch translations.
    * po/sr.po: Update Serbian translations.
    * po/tr.po: Update Turkish translations.

2020-10-09 Wiley E. Hill <wileyhill@gmail.com>

    * src/iface/i_command.c: Add function documentation:

        * i_command_process
        * action_err

    * src/x/x_edit_cprop.c: Reformat Doxygen documentation.

2020-10-08 Wiley E. Hill <wileyhill@gmail.com>
